--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,6 @@ import Socials from "@/components/Socials.astro";
 import LinkButton from "@/components/LinkButton.astro";
 import Card from "@/components/Card.astro";
 import getSortedPosts from "@/utils/getSortedPosts";
-import IconRss from "@/assets/icons/IconRss.svg";
 import IconArrowRight from "@/assets/icons/IconArrowRight.svg";
 import { SOCIALS } from "@/constants";
 
@@ -23,7 +22,7 @@ const recentPosts = sortedPosts.slice(0, 3);
       <div class="flex flex-col gap-6">
         <div>
           <h1 class="text-4xl font-bold sm:text-5xl lg:text-6xl">
-            Victor Le Jamtel
+            Victor Nazianzeno--Le Jamtel
           </h1>
           <p class="mt-3 text-xl text-muted-foreground sm:text-2xl">
             CTI & OSINT | Cybersecurity Engineer
@@ -52,27 +51,7 @@ const recentPosts = sortedPosts.slice(0, 3);
           </LinkButton>
         </div>
 
-        {
-          SOCIALS.length > 0 && (
-            <div class="flex items-center gap-3 pt-2">
-              <Socials />
-              <a
-                target="_blank"
-                href="/rss.xml"
-                class="inline-block p-2"
-                aria-label="rss feed"
-                title="RSS Feed"
-              >
-                <IconRss
-                  width={20}
-                  height={20}
-                  class="stroke-foreground/60 stroke-2 transition-colors hover:stroke-accent"
-                />
-                <span class="sr-only">RSS Feed</span>
-              </a>
-            </div>
-          )
-        }
+        {SOCIALS.length > 0 && <Socials />}
       </div>
     </section>
 
